# slwoggy

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build-all.sh  build-linux.sh  build-windows.sh  build.sh  cdo.code-workspace  create-amalgamation.sh  package-all.sh  package-linux.sh  package-macos.sh  package-windows.sh  run-sanitizers.sh  sanitize.sh  slwoggy.code-workspace  test_amalgamation.cpp  windows-toolchain.cmake
.githooks/: commit-msg
.github/workflows/: amalgamation-build.yml  gemini-review.yml  sanitizers.yml
amalgamate/: amalgamate-config.json  amalgamate-prologue.hpp
amalgamation/: slwoggy.hpp
assets/: catalog.json
assets/scripts/: init.lua
assets/scripts/test/: test.lua
assets/shaders/: pixelate.fs  wave.fs
cmake/: slwoggyConfig.cmake.in
docs/: COMPRESSION_THREAD_DESIGN.md  DataCenterEditor_Design.md  README.md  ROTATION_DESIGN.md  SANITIZERS.md  lua-integration.md  ui-redesign.md
include/: ApplicationView.h  Event.h  InputManager.h  ResourceManager.h  Scene.h  SceneManager.h  buffer_concept.hpp  dll_export.h  fmt_config.hpp  gen_log_macros.h  gen_log_macros.py  generic_buffer_pool.hpp  log.h  log.hpp  log_buffer.hpp  log_dispatcher.hpp  log_dispatcher_impl.hpp  log_exit_handler.hpp  log_file_rotator.hpp  log_file_rotator_impl.hpp  log_filter.hpp  log_filters.hpp  log_formatters.hpp  log_gzip.hpp  log_internal.h  log_line.hpp  log_line_impl.hpp  log_module.hpp  log_sink.hpp  log_sink_filters.hpp  log_sinks.hpp  log_site.hpp  log_structured.hpp  log_structured_impl.hpp  log_types.hpp  log_utils.hpp  log_version.hpp  log_writers.hpp  miniz.c  slwoggy.hpp  (+3 more)
include/lua/: LuaHelpers.h  LuaManager.h  LuaState.h  ScriptContext.h
include/scenes/: LuaMenuScene.h  MenuScene.h  PixelateShaderScene.h  WaveShaderScene.h
sanitizers/: asan.supp  lsan.supp  msan.supp  tsan.supp  ubsan.supp
src/: ApplicationView.cpp  CMakeLists.txt  InputManager.cpp  ResourceManager.cpp  Scene.cpp  SceneManager.cpp  custom_prints.cpp  exit_handler_demo.cpp  log.c  log_mods.cpp  main.cpp  module_filter_demo.cpp  rotation_demo.cpp  simple.cpp  sink_filter_demo.cpp
src/lua/: LuaManager.cpp  LuaState.cpp  ScriptContext.cpp
src/scenes/: LuaMenuScene.cpp  MenuScene.cpp  PixelateShaderScene.cpp  WaveShaderScene.cpp
test-integration/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_generic_buffer_pool.cpp  test_log.cpp  test_log_filters.cpp  test_log_level_control.cpp  test_log_modules.cpp  test_log_site_control.cpp  test_log_statistics.cpp  test_log_structured.cpp  test_rotation.cpp  test_sink_filters.cpp  test_static_buffer.cpp
